<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PRAMIA</string>
    <string name="reska_multi_usaha">Reska Multi Usaha</string>
    <string name="e_resto_version">eRestorasi version 1.0.0</string>
    <string name="copyright">&#169; 2015 Application RMU</string>
    <string name="rights_reserved">All Rights Reserverd.</string>
    <string name="powered_by">Powered By Tripoin</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Login -->
    <string name="string_user_name">User Name</string>
    <string name="string_sign_register">Enter your mobile phone number to sign in or register</string>
    <string name="string_email">Email Address</string>
    <string name="string_mobile_phone_number">Mobile Phone Number</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_next">Next</string>
    <string name="string_learn_about">Learn about ARIUM M-Force</string>

    <!-- Activity Login Validation -->
    <string name="string_sign_in_as">Sign in as :</string>
    <string name="string_default_email">email@email.email</string>
    <string name="string_sign_in">Sign In</string>
    <string name="string_forgot_password">Forgot Password ?</string>
    <string name="string_password">Password</string>
    <string name="string_repassword">Repassword</string>
    <string name="string_incorrect_password">Incorrect password</string>
    <string name="string_show_password">Show password</string>

    <!-- Activity Register new Account -->
    <string name="string_create_new_acc">Create new account with :</string>
    <string name="string_tos_pp">By tapping Create Account, I agree to the Terms of Service and Privacy Policy</string>
    <string name="string_create_acc">Create Account</string>
    <string name="string_email_default">email@email.email</string>
    <string name="string_device_id">Device Id</string>
    <string name="string_confirm_password">Confirm Password</string>
    <string name="string_real_name">Real Name</string>
    <string name="string_birth_date">Birth date</string>
    <string name="string_address">Address</string>

    <!-- Activity Activate Account -->
    <string name="string_activate_account_with">Activate account with :</string>
    <string name="string_activate_account">Activate Account</string>

    <!-- Fragment Configuration -->
    <string name="string_change_host">Change Host</string>
    <string name="string_change_password">Change Password</string>
    <string name="string_current_password">Current Password</string>
    <string name="string_new_password">New Password</string>
    <string name="string_confirm_new_password">Re-type New Password</string>
    <string name="string_confirm_change_password">Change Password</string>

    <!-- ActMain -->
    <string name="string_log_out">Sign Out</string>
    <string name="string_stop_service">Stop Service</string>

    <!-- Common String Bundle -->
    <string name="string_cancel">Cancel</string>
    <string name="string_ok">OK</string>
    <string name="string_favicon">favicon</string>
    <string name="string_clear">Clear</string>
    <string name="string_noconnection">Connection not available</string>
    <string name="string_error">Error</string>
    <string name="string_warning">Warning</string>
    <string name="string_empty"></string>
    <string name="string_space">" "</string>
    <string name="string_information">Information</string>
    <string name="string_an_error_occured">An error occured</string>
    <string name="string_changed_successfully">changed successfully</string>
    <string name="string_fail_get_configuration">Failed to retrieve configuration, server doesn\'t respond</string>

    <!-- UI Messages -->
    <string name="string_should_change_password">Password is expired, please changed your password</string>
    <string name="string_is_not_valid">is not valid</string>
    <string name="string_connection_error">Connection error</string>
    <string name="string_connection_time_out">Connection time out</string>
    <string name="string_cannot_be_empty">can not be empty</string>
    <string name="string_not_equal_to">does not equal to</string>


    <!-- IP Server -->
    <string name="edit_ip_address">Enter Your IP Address</string>
    <string name="ip_address">IP Address</string>
    <string name="edit_port_address">Enter Your Port</string>
    <string name="port">Port</string>
    <string name="connection_test">Test Connection</string>

    <!--Drawer Item-->
    <string name="add_order">Add Order</string>
    <string name="menu_list">Menu List</string>
    <string name="order_list">Order List</string>
    <string name="update_static_order">Update Static Data</string>
    <string name="about">About</string>
    <string name="more_markers">more settings</string>
    <string name="trash">trash</string>
    <string name="change_ip">Change IP Server</string>
    <string name="change_bluetooth">   Bluetooth</string>
    <string name="spam">spam</string>
    <string name="setting">setting</string>
    <string name="settings">settings</string>

    <string name="search">search</string>
    <string name="search_order_list">Search order list</string>
    <string name="add">add</string>

    <!--bluetooth-->
    <string name="text_bluetooth_off">  Bluetooth is Off</string>
    <string name="text_bluetooth_on">  Bluetooth is On</string>

    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>

    <string name="text_view_paired">Paired</string>
    <string name="text_scan_devices">Scan</string>
    <string name="text_stop_scan">Stop</string>

    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>

    <string name="text_pair">Pair</string>

    <string name="text_open_devices">Open</string>
    <string name="text_close_devices">Close</string>
    <string name="text_send_devices">Print</string>

    <!--Order Detail-->
    <string name="change_order_status">Change Order Status</string>
    <string name="status_new">New</string>
    <string name="status_processed">Processed</string>
    <string name="status_prepared">Prepared</string>
    <string name="status_done">Done</string>
    <string name="status_canceled">Cancelled</string>
    <string name="status_pending">Pending</string>
    <string name="status_retry">Retry</string>
    <string name="detail_trainNo">Train No</string>
    <string name="detail_carriageNo">Carriage No</string>
    <string name="detail_seatNo">Seat No</string>

    <string name="total_paid">Total Paid</string>
    <string name="print">Print</string>

    <!--Order List-->
    <string name="title_dialog_srcOrderList">Search Order :</string>
    <string name="label_dialog_orderId">Order No</string>
    <string name="label_dialog_srcStatus">Status</string>
    <string name="label_dialog_srcSeat">Seat</string>
    <string name="label_dialog_srcCrrg">Carriage</string>
    <string name="dropdown_ip_bt_prompt">InputHere</string>
    <string-array name="list_value_status">
        <item>All</item>
        <item>New</item>
        <item>Process</item>
        <item>Prepared</item>
        <item>Delivered</item>
        <item>Cancel</item>
        <item>Pending</item>
    </string-array>
    <string-array name="dropdown_setting_ip_bt">
        <item>No Setting</item>
        <item>Setting IP Server</item>
        <item>Setting Bluetooth</item>
    </string-array>
</resources>
