    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="9"
        android:orientation="vertical"
        android:background="@color/white_base">

        <LinearLayout
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:padding="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_enable"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:height="60dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/mybuttonb2"
                android:textColor="@color/nliveo_white"
                android:text="@string/text_enable" />
            <Button
                android:id="@+id/btn_view_paired"
                android:layout_height="match_parent"
                android:enabled="false"
                android:layout_marginRight="20dp"
                android:layout_width="60dp"
                android:height="60dp"
                android:background="@drawable/mybuttonb2"
                android:textColor="@color/gray_darker"
                android:text="@string/text_view_paired" />
            <Button
                android:id="@+id/btn_test_print"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:height="60dp"
                android:background="@drawable/mybuttonb2"
                android:textColor="@color/gray_darker"
                android:text="@string/text_send_devices" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_status"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#ff0000"
            android:text="@string/text_bluetooth_off"/>
        <ScrollView
            android:id="@+id/view4"
            android:layout_weight="6.5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scrollbarStyle="outsideInset"
            android:background="@android:color/white"
            android:overScrollMode="never">
            <ListView
                android:id="@+id/lv_paired"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:cacheColorHint="#00000000"
                android:layout_weight="6.8"/>
        </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <Button
                android:id="@+id/btn_scan"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:enabled="false"
                android:background="@drawable/mybuttonb"
                android:textColor="@color/gray_darker"
                android:text="@string/text_scan_devices" />
        </LinearLayout>
    </LinearLayout>