<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login7">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configuration"
            android:textColor="@color/black_for_title"
            android:id="@+id/lbConfigurationLogin"
            android:paddingLeft="15dp"
            android:paddingRight="45dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/imgSettingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="10dp">
    </View>

    <ImageView
        android:id="@+id/imageLogoText"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"

        android:src="@drawable/logo_text3"  />

    <EditText
        android:layout_marginTop="3dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:paddingLeft="40dp"
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:hint="@string/string_user_name"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_username"
        android:singleLine="true"
        android:textSize="12sp"
        android:autoText="false"/>

    <EditText
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:paddingLeft="40dp"
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:hint="@string/string_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_password"
        android:singleLine="true"
        android:textSize="12sp"
        android:layout_marginBottom="9dp"

        android:layout_marginTop="0dp"
        />
 <!--   <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/darker_gray">
    </View>-->

    <CheckBox
        android:id="@+id/chkShowPassword"
        android:layout_marginLeft="53dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:button="@drawable/checkbox"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"

        android:text="@string/string_show_password"/>

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:background="@drawable/bg_login_button"
        android:id="@+id/btSignIn"
        android:textColor="@android:color/white"
        android:text="@string/string_sign_in"
        android:textSize="13dp"
        android:textStyle="bold" />

</LinearLayout>
